# qt_ui_train

./: .gitignore  Dockerfile  Dockerfile_chatgpt  Dockerfile_doest_not_work  Dockerfile_gemini  README.md  docker-compose.yml  vnc_entrypoint.sh
.devcontainer/: Dockerfile  Dockerfile1  devcontainer.json  devcontainer_old.json  devcontainer_xquartz.json
train/first_sample/: CMakeLists.txt  train.pro
train/hw_label/: CMakeLIsts.txt  main.cpp
train/hw_qml/: CMakeLists.txt  main.qml
